[package]
name = "halo2_hammster"
version = "0.1.0"
edition = "2021"

[lib]
name = "hammster"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
extend = "1.2.0"
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
plotters = "0.3.4"
serde = "1.0.156"
serde_json = "1.0.94"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
rayon = "1.7.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-rayon = "1.0.3"
